delete slick-carousel, added index js and fix funciont js minify

--- a/index.html
+++ b/index.html
@@ -44,5 +44,5 @@
   </body>
   <script src="node_modules/jquery/dist/jquery.min.js"></script>  <!-- Importado node modules -->
   <script type="text/javascript" src="node_modules/slick-carousel/slick/slick.min.js"></script> <!-- Importado node modules -->
-  <script type="text/javascript" src="assets/dist/js/slick-carousel.js"></script>
+  <script type="text/javascript" src="assets/dist/js/index.js"></script>
 </html>
