change path js and css minify

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gulp and Slick</title>
-    <link rel="stylesheet" href="assets/dist/css/index.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/dist/css/index.min.css">
     <link rel="stylesheet" type="text/css" href="node_modules/slick-carousel/slick/slick.css"/> <!-- Importado node modules -->
     <link rel="stylesheet" type="text/css" href="node_modules/slick-carousel/slick/slick-theme.css"/> <!-- Importado node modules -->
   </head>
@@ -44,5 +44,5 @@
   </body>
   <script src="node_modules/jquery/dist/jquery.min.js"></script>  <!-- Importado node modules -->
   <script type="text/javascript" src="node_modules/slick-carousel/slick/slick.min.js"></script> <!-- Importado node modules -->
-  <script type="text/javascript" src="assets/dist/js/index.js"></script>
+  <script type="text/javascript" src="assets/dist/js/index-min.js"></script>
 </html>
