moved file css to src

--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -5,18 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gulp and Slick</title>
+    <link rel="shortcut icon" href="assets/dist/img/npm.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="assets/dist/css/index.min.css">
     <link rel="stylesheet" type="text/css" href="node_modules/slick-carousel/slick/slick.css"/> <!-- Importado node modules -->
     <link rel="stylesheet" type="text/css" href="node_modules/slick-carousel/slick/slick-theme.css"/> <!-- Importado node modules -->
   </head>
 
   <body>
-    <div class="container">
-      <h1>Usando o Gulp e o slick-carousel</h1>
-    </div>
-    
-    <br>
-
     <div class="main-carousel">
       <section class="carousel">
         <div class="slide-image">
